typo update, adding cards

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,8 @@
-<div class="row">
-  <div class="col-md-6">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <div class="row">
+ <div class="row-md-6"></div>
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -16,7 +19,14 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+  </div>
+</div>
+
+
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+   <div class="row-md-6">
     <h2>Signup</h2>
 
     <form class="form signup-form">
@@ -38,5 +48,9 @@
     </form>
   </div>
 </div>
+  </div>
+</div>
+
+  
 
 <script src="./js/login.js"></script>
