--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -44,6 +44,23 @@
       </div>
     </form>
   </div>
+
+
+  <div
+  style="
+    height: 150px;
+    width: 500px;
+    border: 1px solid #ccc;
+    font: 16px/26px Georgia, Garamond, Serif;
+    overflow: auto;
+  "
+>
+
+  <table id="messages"></table>
+</div>
+<form id="form" action="">
+  <input id="input" autocomplete="off" /><button>Send</button>
+</form>
   </div>
 </div>
 
