--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,25 +10,11 @@
 </head>
 
 <body>
-  <div class="m-4">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a href="#" class="navbar-brand">
-                
-                "./public/assets/icon.png"
-            </a>
-            <h2>Move</h2>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse"
-                <div class="navbar-nav ms-auto">
-                    {{!-- <a href="#" class="nav-item nav-link">Login</a> --}}
-                </div>
-            </div>
-        </div>
-    </nav>
-</div>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="../../public/assets/move.png" width="35px" class="d-inline-block align-top" alt="move icon" > Move
+  </a>
+</nav>
         
         {{#if logged_in}}
         <a href="/profile">profile</a> |
