--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+body {
+  margin: 1em;
+  padding-bottom: 3rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Helvetica, Arial, sans-serif;
+}
 #form {
   background: rgba(0, 0, 0, 0.15);
   padding: 0.25rem;
@@ -34,7 +40,28 @@
 }
 #messages > li {
   padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 #messages > li:nth-child(odd) {
   background: #efefef;
+}
+.socket-message {
+  margin-right: 1em;
+  width: 295px;
+}
+.socket-user {
+  width: 130px;
+  overflow-wrap: anywhere;
+  font-size: smaller;
+  font-weight: lighter;
+  font-style: italic;
+  text-align: right;
+}
+.socket-container {
+  height: 250px;
+  width: 498px;
+  border: 1px solid #ccc;
+  font: 16px/26px Georgia, Garamond, Serif;
+  overflow: auto;
 }
