--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,30 @@
     <img src="../../public/assets/move.png" width="35px" class="d-inline-block align-top" alt="move icon" > Move
   </a>
 </nav>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <div class="row">
+ <div class="rcol-sm"></div>
+    <h2>Login</h2>
+
+    <form class="form login-form">
+      <div class="form-group">
+        <label for="email-login">email:</label>
+        <input class="form-input" type="text" id="email-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">password:</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">login</button> or <a href="{{{signup}}}">sign up</a> 
+      </div>
+    </form>
+
+
+<script src="./js/login.js"></script>
         
         {{#if logged_in}}
         <a href="/profile">profile</a> |
