--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <div class="row">
- <div class="row-md-6"></div>
+ <div class="rcol-sm"></div>
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -15,42 +15,14 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">login</button> or <a href="/signup">signup</a> 
       </div>
     </form>
-  </div>
-  </div>
-</div>
 
 
 
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-   <div class="row-md-6">
-    <h2>Signup</h2>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
-  </div>
-</div>
 
-  
+
 
 <script src="./js/login.js"></script>
