--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,7 +15,7 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button> or <a href="/signup">signup</a> 
+        <button class="btn btn-primary" type="submit" id ="submitBtn">login</button> or <a href="/signup">signup</a> 
       </div>
     </form>
 
@@ -25,4 +25,4 @@
 
 
 
-<script src="./js/login.js"></script>
+{{!-- <script src="./js/login.js"></script> --}}
