--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,9 @@
-  <div class="col-md-6">
-    <h2>Signup</h2>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <div class="row">
+ <div class="rcol-sm"></div>
+ <h2>signup</h2>
 
     <form class="form signup-form">
       <div class="form-group">
