signup now works

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,8 +19,9 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit" class="signupBtn" >signup</button>
       </div>
     </form>
   </div>
 </div>
+<script src="/js/signup.js"></script>
