impletment new post

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 <body>
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#"> 
-    <img src="./assets/move.png" width="35px" class="d-inline-block align-top" alt="move icon" > <a class="navbar-brand" href="/"> move</a>
+    <img src="/./assets/move.png" width="35px" class="d-inline-block align-top" alt="move icon" > <a class="navbar-brand" href="/"> move</a>
   </a>
 </nav>
 
