--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"><div class="row">
   <div class="col-auto">
-    <h2>Hello, {{name}}. Select your favorite outdoor activity! </h2>
+    <h2>Hello, {{posts.user.username}}. Select your favorite outdoor activity! </h2>
   </div>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -77,7 +77,7 @@
     {{#each posts as |post|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
+        <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
