--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,3 +65,20 @@ body {
   font: 16px/26px Georgia, Garamond, Serif;
   overflow: auto;
 }
+body, html {
+  height: 100%;
+}
+
+.parallax {
+  /* The image used */
+  background-image: url("./assets/mountain.jpeg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
