--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,91 +1,116 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"><div class="row">
-  <div class="col-auto">
+<link
+  rel='stylesheet'
+  href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
+/><div class='row'>
+  <div class='col-auto'>
     <h2>Hello, {{name}}. Select your favorite outdoor activity! </h2>
   </div>
 </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Hiking</a>
-   <a class="navbar-brand" href="#">Biking</a>
-   <a class="navbar-brand" href="#">Skateboarding</a>
-    <a class="navbar-brand" href="#">Golfing</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+<nav class='navbar navbar-expand-lg navbar-light bg-light'>
+  <a class='navbar-brand' href='#'>Hiking</a>
+  <a class='navbar-brand' href='#'>Biking</a>
+  <a class='navbar-brand' href='#'>Skateboarding</a>
+  <a class='navbar-brand' href='#'>Golfing</a>
+  <button
+    class='navbar-toggler'
+    type='button'
+    data-toggle='collapse'
+    data-target='#navbarSupportedContent'
+    aria-controls='navbarSupportedContent'
+    aria-expanded='false'
+    aria-label='Toggle navigation'
+  >
+    <span class='navbar-toggler-icon'></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+  <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+    <ul class='navbar-nav mr-auto'>
+      <li class='nav-item active'>
+        <a class='nav-link' href='#'>Home
+          <span class='sr-only'>(current)</span></a>
       </li>
-          </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </ul>
+    <form class='form-inline my-2 my-lg-0'>
+      <input
+        class='form-control mr-sm-2'
+        type='search'
+        placeholder='Search'
+        aria-label='Search'
+      />
+      <button
+        class='btn btn-outline-success my-2 my-sm-0'
+        type='submit'
+      >Search</button>
     </form>
   </div>
 </nav>
 
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
- 
-<div class="row mt-4">
-  <div class="col-md-6">
-     <form class="form new-post-form">
-      <div class="form-group">
-        <label for="post-name">Post Title:</label>
-        <input class="form-input" type="text" id="post-name" name="post-name" />
-      </div>
-      <div class="form-group">
-        <label for="post-desc">Post Contents:</label>
-        <textarea class="form-input" id="post-desc" name="post-desc"></textarea>
-      </div>
-      <div class="form-group">
-         <button type="submit" class="btn btn-primary">Create Post</button>
-      </div>
-    </form>
-  </div>
+<div class='card' style='width: 18rem;'>
+  <div class='card-body'>
 
+    <div class='row mt-4'>
+      <div class='col-md-6'>
+        <form class='form new-post-form'>
+          <div class='form-group'>
+            <label for='post-name'>Post Title:</label>
+            <input
+              class='form-input'
+              type='text'
+              id='post-name'
+              name='post-name'
+            />
+          </div>
+          <div class='form-group'>
+            <label for='post-desc'>Post Contents:</label>
+            <textarea
+              class='form-input'
+              id='post-desc'
+              name='post-desc'
+            ></textarea>
+          </div>
+          <div class='form-group'>
+            <button type='submit' class='btn btn-primary'>Create Post</button>
+          </div>
+        </form>
+      </div>
 
-  <div
-  style="
+      <div
+        style='
     height: 150px;
     width: 500px;
     border: 1px solid #ccc;
     font: 16px/26px Georgia, Garamond, Serif;
     overflow: auto;
-  "
->
+  '
+      >
 
-  <table id="messages"></table>
-</div>
-<form id="form" action="">
-  <input id="input" autocomplete="off" /><button>Send</button>
-</form>
+        <table id='messages'></table>
+      </div>
+      <form id='form' action=''>
+        <input id='input' autocomplete='off' /><button>Send</button>
+      </form>
+    </div>
   </div>
-</div>
-
-
-
-
-    
-       
 
   {{#if posts.length}}
-  <div class="col-md-6 project-list">
-    <h3>Recent posts:</h3>
+    <div class='col-md-6 project-list'>
+      <h3>Recent posts:</h3>
 
-    {{#each posts as |post|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
-      </div>
+      {{#each posts as |post|}}
+        <div class='row mb-2'>
+          <div class='col-md-8'>
+            <h4><a href='/post/{{post.id}}'>{{post.name}}</a></h4>
+          </div>
+          <div class='col-md-4'>
+            <button
+              class='btn btn-sm btn-danger'
+              data-id='{{post.id}}'
+            >DELETE</button>
+          </div>
+        </div>
+      {{/each}}
     </div>
-    {{/each}}
-  </div>
   {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+<script src='./js/profile.js'></script>
