--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,26 +1,52 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <div class="row">
- <div class="rcol-sm"></div>
-    <h2>Login</h2>
+<link
+  rel='stylesheet'
+  href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
+/>
+<div class='card' style='width: 18rem;'>
+  <div class='card-body'>
+    <div class='row'>
+      <div class='rcol-sm'></div>
+      <h2>Login</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit" id ="submitBtn">login</button> or <a href="/signup">signup</a> 
-      </div>
-    </form>
+      <form class='form login-form'>
+        <div class='form-group'>
+          <label for='email-login'>email:</label>
+          <input class='form-input' type='text' id='email-login' />
+        </div>
+        <div class='form-group'>
+          <label for='password-login'>password:</label>
+          <input class='form-input' type='password' id='password-login' />
+        </div>
+        <div class='form-group'>
+          <button
+            class='btn btn-primary'
+            type='submit'
+            id='submitBtn'
+          >login</button>
+          or
+          <a href='/signup'>signup</a>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
+{{#each posts as |post|}}
+  <div class='row mb-4 post'>
+    <div class='col-md-5'>
+      <h2>
 
-<script src="./js/login.js"></script>
+        <a href='/post/{{post.id}}'>{{post.title}}</a>
+      </h2>
+      <p>Created by {{post.user.username}} on {{post.date_created}}</p>
 
+    </div>
+    <div class='col-md-7'>
+      <p>
+        {{post.content}}
+      </p>
+    </div>
+  </div>
+{{/each}}
 
-
+<script src='./js/login.js'></script>
