--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,27 +1,33 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <div class="row">
- <div class="rcol-sm"></div>
- <h2>signup</h2>
+<link
+  rel='stylesheet'
+  href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
+/>
+<div class='card' style='width: 18rem;'></div>
+<div class='card-body'></div>
+<div class='row'></div>
+<div class='rcol-sm'></div>
+<h2>signup</h2>
 
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit" class="signupBtn" >signup</button>
-      </div>
-    </form>
+<form class='form signup-form'>
+  <div class='form-group'>
+    <label for='name-signup'>name:</label>
+    <input class='form-input' type='text' id='name-signup' />
   </div>
-</div>
-<script src="/js/signup.js"></script>
+  <div class='form-group'>
+    <label for='email-signup'>email:</label>
+    <input class='form-input' type='text' id='email-signup' />
+  </div>
+  <div class='form-group'>
+    <label for='password-signup'>password:</label>
+    <input class='form-input' type='password' id='password-signup' />
+  </div>
+  <div class='form-group'>
+    <button
+      class='btn btn-primary'
+      type='submit'
+      class='signupBtn'
+    >signup</button>
+  </div>
+</form>
+
+<script src='/js/signup.js'></script>
