--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,25 +2,26 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <div class="row">
- <div class="rcol-sm"></div>
-    <h2>Login</h2>
+      <div class="rcol-sm"></div>
+      <h2>signup</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit" id ="submitBtn">login</button> or <a href="/signup">signup</a> 
-      </div>
-    </form>
-
-
-<script src="./js/login.js"></script>
-
-
-
+      <form class="form signup-form">
+        <div class="form-group">
+          <label for="name-signup">name:</label>
+          <input class="form-input" type="text" id="name-signup" />
+        </div>
+        <div class="form-group">
+          <label for="email-signup">email:</label>
+          <input class="form-input" type="text" id="email-signup" />
+        </div>
+        <div class="form-group">
+          <label for="password-signup">password:</label>
+          <input class="form-input" type="password" id="password-signup" />
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit" class="signupBtn">signup</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <script src="/js/signup.js"></script>
