--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"><div class="row">
   <div class="col-auto">
-    <h2>Hello, {{posts.user.username}}. Select your favorite outdoor activity! </h2>
+    <h2>Hello, {{user.username}}. Select your favorite outdoor activity! </h2>
   </div>
 </div>
 <nav class='navbar navbar-expand-lg navbar-light bg-light'>
@@ -42,53 +42,12 @@
   </div>
 </nav>
 
-<div class='card' style='width: 18rem;'>
-  <div class='card-body'>
+<div>
+      <a href='/post/new'>Create a new post</a>
+</div>
 
-    <div class='row mt-4'>
-      <div class='col-md-6'>
-        <form class='form new-post-form'>
-          <div class='form-group'>
-            <label for='post-name'>Post Title:</label>
-            <input
-              class='form-input'
-              type='text'
-              id='post-name'
-              name='post-name'
-            />
-          </div>
-          <div class='form-group'>
-            <label for='post-desc'>Post Contents:</label>
-            <textarea
-              class='form-input'
-              id='post-desc'
-              name='post-desc'
-            ></textarea>
-          </div>
-          <div class='form-group'>
-            <button type='submit' class='btn btn-primary'>Create Post</button>
-          </div>
-        </form>
-      </div>
 
-      <div
-        style='
-    height: 150px;
-    width: 500px;
-    border: 1px solid #ccc;
-    font: 16px/26px Georgia, Garamond, Serif;
-    overflow: auto;
-  '
-      >
-
-        <table id='messages'></table>
-      </div>
-      <form id='form' action=''>
-        <input id='input' autocomplete='off' /><button>Send</button>
-      </form>
-    </div>
-  </div>
-
+<div>
   {{#if posts.length}}
     <div class='col-md-6 project-list'>
       <h3>Recent posts:</h3>
@@ -96,7 +55,7 @@
       {{#each posts as |post|}}
         <div class='row mb-2'>
           <div class='col-md-8'>
-            <h4><a href='/post/{{post.id}}'>{{post.name}}</a></h4>
+            <h4><a href='/post/{{post.id}}'>{{post.title}}</a></h4>
           </div>
           <div class='col-md-4'>
             <button
@@ -109,5 +68,5 @@
     </div>
   {{/if}}
 </div>
-
+</div>
 <script src='./js/profile.js'></script>
