--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -12,6 +12,15 @@
             <textarea class="form-input" id="post-content" name="post-content">{{post.content}}</textarea>
           </div>
           <div class="form-group">
+            <label for="category-list">Category:</label>
+            <input list="category-list" class="form-control">
+            <datalist id="category">
+              {{#each categories as |category|}}
+              <option data-id="{{category.id}}">{{category.name}}</option>
+              {{/each}}
+            </datalist>
+          </div>
+          <div class="form-group">
             <button type="button" class="btn btn-primary" data-id="{{post.id}}" id="update-post">Update Post</button>
           </div>
           <div class="form-group">
@@ -22,7 +31,5 @@
     </div>
   </div>
 </div>
-
-<p>{{post.category.name}}</p>
 
 <script src="/./js/postForm.js"></script>
