--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -29,8 +29,15 @@
 <div>
       <a href='/post/new'>Create a new post</a>
 </div>
-
+{{!-- Chat client --}}
+ <div class="socket-container" id="messageContainer">
+      <ul id="socketMessages"></ul>
+    </div>
+    <form id="socketForm" action="">
+      <input id="socketText" autocomplete="off" /><button>Send</button>
+    </form>
 <div>
+
   {{#if posts.length}}
 
     <div class='col-md-6 project-list'>
@@ -43,11 +50,8 @@
             <h4><a href='/post/{{post.id}}'>{{post.title}}</a></h4>
           </div>
           <div class='col-md-4'>
-            <button
-              class='btn btn-sm btn-danger'
-              data-id='{{post.id}}'
-            >DELETE</button>
-          </div>
+        
+        </div>
         </div>
       {{/each}}
     </div>
