--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -14,6 +14,23 @@
     </div>
   </div>
 <div>
+
+{{#each comments as |comment|}}
+<div class="text-center">
+ <div class='row mb-4 post'>
+    <div class='col-md-5'>
+
+      <p>Comment by {{comment.user.username}} on {{comment.date_created}}</p>
+    </div>
+    <div class='col-md-7'>
+      <p>
+        {{comment.content}}
+      </p>
+    </div>
+  </div>
+<div>
+  {{/each}}
+
   {{!-- If a user is logged in then they get access to a comment form --}}
 {{#if logged_in}}
 <form class="form new-comment-form">
