--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,8 @@
     <link rel='stylesheet' href='./css/style.css' />
   </head>
   <body>
-    <nav class='navbar navbar-light bg-light'>
-      <a class='navbar-brand' href='#'>
+    <nav class='navbar .bg-#FFB611'>
+      <a class='navbar-brand' href='/'>
         {{!-- Navbar icon --}}
         <img
           src='/./assets/move.png'
@@ -29,7 +29,7 @@
         {{!-- If a user is logged in then render profile and logout links in the navbar --}}
         {{#if logged_in}}
       <a href='/profile'>profile</a>
-      <button class='no-button' id='logout'>logout</button>
+      <button  id='logout'>logout</button>
       <script src='/js/logout.js'></script>
     {{/if}}
     {{!-- "move" text that links back to the hompage --}}
