--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   {{#each categories as |category|}}
-  <a class="navbar-brand" href="#">{{category.name}}</a>
+  <a class="navbar-brand" href="">{{category.name}}</a>
   {{/each}}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +21,18 @@
   </div>
 </nav>
 
-<div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
       <a href='/post/new'>Create a new post</a>
-</div>
-{{!-- Chat client --}}
+    </div>
+    <div class="col-sm">
+      
+    </div>
+    <div class="col-sm">
+      Chat with fellow enthusiasts!
+     {{!-- Chat client --}}
  <div class="socket-container" id="messageContainer">
       <ul id="socketMessages"></ul>
     </div>
@@ -32,6 +40,11 @@
       <input id="socketText" autocomplete="off" /><button>Send</button>
     </form>
 <div>
+
+    </div>
+  </div>
+</div>
+
 
   {{#if posts.length}}
 
