--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -12,6 +12,15 @@
             <textarea class="form-input" id="post-content" name="post-content"></textarea>
           </div>
           <div class="form-group">
+            <label for="post-category">Category:</label>
+            <input list="category" class="form-control" id="post-category">
+            <datalist id="category">
+              {{#each categories as |category|}}
+              <option data-id="{{category.id}}">{{category.name}}</option>
+              {{/each}}
+            </datalist>
+          </div>
+          <div class="form-group">
             <button type="submit" class="btn btn-primary">Create Post</button>
           </div>
         </form>
