--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -12,8 +12,8 @@
             <textarea class="form-input" id="post-content" name="post-content">{{post.content}}</textarea>
           </div>
           <div class="form-group">
-            <label for="category-list">Category:</label>
-            <input list="category-list" class="form-control">
+            <label for="post-category">Category:</label>
+            <input list="category" class="form-control" id="post-category" value="{{post.category.name}}">
             <datalist id="category">
               {{#each categories as |category|}}
               <option data-id="{{category.id}}">{{category.name}}</option>
