partial styling update

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
         {{!-- If a user is logged in then render profile and logout links in the navbar --}}
         {{#if logged_in}}
       <a href='/profile'>profile</a>
-      <button  id='logout'>logout</button>
+      <a   id='logout'>logout</a>
       <script src='/js/logout.js'></script>
     {{/if}}
     {{!-- "move" text that links back to the hompage --}}
