--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <div class="row">
   <div class="col-auto">
-    <h2>Hello, {{username}} Select your favorite outdoor activity! </h2>
+    <h2>Hello, {{username}} What would you like to do today?</h2>
   </div>
 </div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -20,18 +20,19 @@
     </ul>
   </div>
 </nav>
+<div class="card">
 
-
+{{!-- Create post button --}}
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      <a href='/post/new'>Create a new post</a>
+      <a href='/post/new' class="btn btn-primary">Create a new Post</a>
     </div>
     <div class="col-sm">
       
     </div>
     <div class="col-sm">
-      Chat with fellow enthusiasts!
+     <h3> Chat with fellow outdoor enthusiasts!</h3>
      {{!-- Chat client --}}
  <div class="socket-container" id="messageContainer">
       <ul id="socketMessages"></ul>
@@ -45,7 +46,7 @@
   </div>
 </div>
 
-
+</div>
   {{#if posts.length}}
 
     <div class='col-md-6 project-list'>
