--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,11 +1,12 @@
-<link
-  rel='stylesheet'
-  href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
-/>
-<div class='card' style='width: 18rem;'></div>
-<div class='card-body'></div>
-<div class='row'></div>
-<div class='rcol-sm'></div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">     
+<div class='card' style='width: 18rem;'>
+<div class='card-body'>
+<div class='row'>
+<div class='rcol-sm'>
 <h2>signup</h2>
 
 <form class='form signup-form'>
@@ -29,5 +30,14 @@
     >signup</button>
   </div>
 </form>
+</div>
+</div>
+</div>
+</div>
+
+ </div>
+    <div class="col-sm">
+     
+    </div>
 
 <script src='/js/signup.js'></script>
