--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,9 @@
-<div class='card' style='width: 18rem;'>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+      <div class='card' style='width: 18rem;'>
   <div class='card-body'>
     <div class='row'>
       <div class='rcol-sm'></div>
@@ -26,4 +31,10 @@
     </div>
   </div>
 </div>
+
+
+ </div>
+    <div class="col-sm">
+     
+    </div>
 <script src='./js/login.js'></script>
