--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -15,8 +15,29 @@
   </div>
 <div>
 
+
+  {{#if logged_in}}
+<form class="form new-comment-form">
+   <div class="form-group">
+        <label for="comment-name">Add a comment</label>
+        <input class="form-input" type="text" id="comment-name" name="comment-name" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Create Comment</button>
+      </div>
+    </form>
+  </div>
+ {{/if}}
+</div>
+
+
 {{#each comments as |comment|}}
+<h4> User comments</h4>
+<div class="card">
+  <div class="card-body">
+  
 <div class="text-center">
+  
  <div class='row mb-4 post'>
     <div class='col-md-5'>
 
@@ -31,18 +52,8 @@
 <div>
   {{/each}}
 
-  {{!-- If a user is logged in then they get access to a comment form --}}
-{{#if logged_in}}
-<form class="form new-comment-form">
-   <div class="form-group">
-        <label for="comment-name">Add a comment</label>
-        <input class="form-input" type="text" id="comment-name" name="comment-name" />
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create Comment</button>
-      </div>
-    </form>
   </div>
- {{/if}}
 </div>
+
+  {{!-- If a user is logged in then they get access to a comment form --}}
 <script src="/./js/comment.js"></script>
