add view category page and format dates

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   {{#each categories as |category|}}
-  <a class="navbar-brand" href="">{{category.name}}</a>
+  <a class="navbar-brand" href="/category/{{category.id}}">{{category.name}}</a>
   {{/each}}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
