--- a/views/view-category.handlebars
+++ b/views/view-category.handlebars
@@ -1,4 +1,5 @@
-{{!-- Looping through all of our posts and displaying them on the homepage --}}
+{{category.name}}
+
 {{#each posts as |post|}}
   <div class='row mb-4 post'>
     <div class='col-md-5'>
@@ -14,5 +15,3 @@
     </div>
   </div>
 {{/each}}
-
-<script src='./js/login.js'></script>
