--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -1,4 +1,7 @@
 {{!-- This is the single post view,  where a user is sent when they click on a posts title --}}
+<div class="card">
+<div class="container" style="background-color: #FFF7D4;">
+
 <div class="text-center">
  <div class='row mb-4 post'>
     <div class='col-md-5'>
@@ -13,9 +16,13 @@
       </p>
     </div>
   </div>
-<div>
 
-
+</div>
+</div>
+ <div class="col-sm"></div>
+<div class="card">
+<div class="container" style="background-color: #FFF7D4;">
+ <div class="col-sm">
   {{#if logged_in}}
 <form class="form new-comment-form">
    <div class="form-group">
@@ -28,6 +35,7 @@
     </form>
   </div>
  {{/if}}
+</div>
 </div>
 
 {{#each comments as |comment|}}
@@ -52,6 +60,8 @@
   {{/each}}
 
   </div>
+</div>
+</div>
 </div>
 
   {{!-- If a user is logged in then they get access to a comment form --}}
