--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -1,69 +1,62 @@
 {{!-- This is the single post view,  where a user is sent when they click on a posts title --}}
 <div class="card">
-<div class="container" style="background-color: #FFF7D4;">
-
-<div class="text-center">
- <div class='row mb-4 post'>
-    <div class='col-md-5'>
-      <h2>
-      <a href='/post/{{post.id}}'>{{post.title}}</a>
-      </h2>
-      <p>{{post.category.name}}</p>
-      <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
-    </div>
-    <div class='col-md-7'>
-      <p>
-        {{post.content}}
-      </p>
+  <div class="container" style="background-color: #FFF7D4;">
+    <div class="text-center">
+    <div class='row mb-4 post'>
+        <div class='col-md-5'>
+          <h2>
+            <a href='/post/{{post.id}}'>{{post.title}}</a>
+          </h2>
+          <p>{{post.category.name}}</p>
+          <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
+        </div>
+        <div class='col-md-7'>
+          <p>
+            {{post.content}}
+          </p>
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-</div>
-</div>
- <div class="col-sm"></div>
+<div class="col-sm"></div>
+
 <div class="card">
-<div class="container" style="background-color: #FFF7D4;">
- <div class="col-sm">
-  {{#if logged_in}}
-<form class="form new-comment-form">
-   <div class="form-group">
-        <label for="comment-name">Add a comment</label>
-        <input class="form-input" type="text" id="comment-name" name="comment-name" />
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create Comment</button>
-      </div>
-    </form>
+  <div class="container" style="background-color: #FFF7D4;">
+    <div class="col-sm">
+    {{#if logged_in}}
+      <form class="form new-comment-form">
+        <div class="form-group">
+          <label for="comment-name">Add a comment</label>
+          <input class="form-input" type="text" id="comment-name" name="comment-name" />
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Create Comment</button>
+        </div>
+      </form>
+    {{/if}}
+    </div>
   </div>
- {{/if}}
-</div>
 </div>
 
-{{#each comments as |comment|}}
 <h4> User comments</h4>
+{{#each comments as |comment|}}
 <div class="card">
   <div class="card-body">
-  
-<div class="text-center">
-  
- <div class='row mb-4 post'>
-    <div class='col-md-5'>
-
-      <p>Comment by {{comment.user.username}} on {{ format_date comment.date_created}}</p>
-    </div>
-    <div class='col-md-7'>
-      <p>
-        {{comment.content}}
-      </p>
+    <div class="text-center">
+      <div class='row mb-4 post'>
+        <div class='col-md-5'>
+          <p>Comment by {{comment.user.username}} on {{ format_date comment.date_created}}</p>
+        </div>
+        <div class='col-md-7'>
+          <p>{{comment.content}}</p>
+        </div>
+      </div>
     </div>
   </div>
-<div>
-  {{/each}}
-
-  </div>
 </div>
-</div>
-</div>
+{{/each}}
 
   {{!-- If a user is logged in then they get access to a comment form --}}
 <script src="/./js/comment.js"></script>
