--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,43 +1,37 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-    </div>
-    <div class="col-sm">
-<h1> Add a new post</h1>
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <form class="form new-post-form">
-          <div class="form-group">
-            <label for="post-title">Post Title:</label>
-            <input class="form-input" type="text" id="post-title" name="post-title" />
+  <div class="row justify-content-center">
+    <div class="col-md-8" >
+      <h1> Add a new post</h1>
+      <div class="card">
+        <div class="card-body">
+          <div class="row mt-4">
+            <div class="col">
+              <form class="form new-post-form">
+                <div class="form-group">
+                  <label for="post-title">Post Title:</label>
+                  <input class="form-input col" type="text" id="post-title" name="post-title" />
+                </div>
+                <div class="form-group">
+                  <label for="post-content">Post Contents:</label>
+                  <textarea class="form-input col" id="post-content" name="post-content"></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="post-category">Category:</label>
+                  <input list="category" class="form-control" id="post-category">
+                  <datalist id="category">
+                    {{#each categories as |category|}}
+                    <option data-id="{{category.id}}">{{category.name}}</option>
+                    {{/each}}
+                  </datalist>
+                </div>
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary">Create Post</button>
+                </div>
+              </form>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="post-content">Post Contents:</label>
-            <textarea class="form-input" id="post-content" name="post-content"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="post-category">Category:</label>
-            <input list="category" class="form-control" id="post-category">
-            <datalist id="category">
-              {{#each categories as |category|}}
-              <option data-id="{{category.id}}">{{category.name}}</option>
-              {{/each}}
-            </datalist>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary">Create Post</button>
-          </div>
-        </form>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-
- </div>
-    <div class="col-sm">
-     
     </div>
   </div>
 </div>
