--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,40 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-    </div>
-    <div class="col-sm">
-      <div class='card' style='width: 18rem;'>
-  <div class='card-body'>
-    <div class='row'>
-      <div class='rcol-sm'></div>
-      <h2>Login</h2>
-{{!-- Our login form --}}
-      <form class='form login-form'>
-        <div class='form-group'>
-          <label for='email-login'>email:</label>
-          <input class='form-input' type='text' id='email-login' />
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class='card'>
+        <div class='card-body'>
+          <div class='row'>
+            <h2>Login</h2>
+          </div> 
+          <div class="row">
+            <div class="col">
+              {{!-- Our login form --}}
+              <form class='form login-form'>
+                {{!-- <div class="container"> --}}
+                  <div class='form-group'>
+                    <label for='email-login'>email:</label>
+                    <input class='form-input col' type='text' id='email-login' />
+                  </div>
+                  <div class='form-group'>
+                    <label for='password-login'>password:</label>
+                    <input class='form-input col' type='password' id='password-login' />
+                  </div>
+                  <div class='form-group'>
+                    <button
+                      class='btn btn-primary'
+                      type='submit'
+                      id='submitBtn'
+                    >login</button>
+                    &nbsp;or&nbsp;
+                    <a href='/signup'>signup</a>
+                  </div>
+                {{!-- </div> --}}
+              </form>
+            </div>
+          </div>
         </div>
-        <div class='form-group'>
-          <label for='password-login'>password:</label>
-          <input class='form-input' type='password' id='password-login' />
-        </div>
-        <div class='form-group'>
-          <button
-            class='btn btn-primary'
-            type='submit'
-            id='submitBtn'
-          >login</button>
-          or
-          <a href='/signup'>signup</a>
-        </div>
-      </form>
+      </div>
     </div>
-  </div>
-</div>
-
-
- </div>
-    <div class="col-sm">
-     
-    </div>
+  </div>  
+</div>  
 <script src='./js/login.js'></script>
