--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,43 +1,42 @@
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+    <div class='card'>
+      <div class='card-body'>
+        <div class='row'>
+          <h2>signup</h2>
+        </div>
+        <div class='row'>
+          <div class="col">
+            <form class='form signup-form' style="width=100%">
+              <div class="container">
+                <div class='form-group'>
+                  <label for='name-signup'>name:</label>
+                  <input class='form-input col' type='text' id='name-signup' />
+                </div>
+                <div class='form-group'>
+                  <label for='email-signup'>email:</label>
+                  <input class='form-input col' type='text' id='email-signup' />
+                </div>
+                <div class='form-group'>
+                  <label for='password-signup'>password:</label>
+                  <input class='form-input col' type='password' id='password-signup' />
+                </div>
+                <div class='form-group'>
+                  <button
+                    class='btn btn-primary'
+                    type='submit'
+                    class='signupBtn'
+                  >signup</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-sm">     
-<div class='card' style='width: 18rem;'>
-<div class='card-body'>
-<div class='row'>
-<div class='rcol-sm'>
-<h2>signup</h2>
-
-<form class='form signup-form'>
-  <div class='form-group'>
-    <label for='name-signup'>name:</label>
-    <input class='form-input' type='text' id='name-signup' />
-  </div>
-  <div class='form-group'>
-    <label for='email-signup'>email:</label>
-    <input class='form-input' type='text' id='email-signup' />
-  </div>
-  <div class='form-group'>
-    <label for='password-signup'>password:</label>
-    <input class='form-input' type='password' id='password-signup' />
-  </div>
-  <div class='form-group'>
-    <button
-      class='btn btn-primary'
-      type='submit'
-      class='signupBtn'
-    >signup</button>
-  </div>
-</form>
-</div>
-</div>
-</div>
-</div>
-
- </div>
-    <div class="col-sm">
-     
     </div>
+  </div>  
+</div>
 
 <script src='/js/signup.js'></script>
