--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -20,7 +20,7 @@
     </div>
   </div>
 </div>
-  {{#if logged_in}}
+{{#if logged_in}}
   {{!-- If a user is logged in then they get access to a comment form --}}
 <div class="card">
   <div class="container" style="background-color: #FFF7D4;">
@@ -37,9 +37,10 @@
     </div>
   </div>
 </div>
-  {{/if}}
+{{/if}}
   
-  {{#if comments}}
+{{#if comments}}
+{{!-- only render comments section if they exist --}}
 <h4> User comments</h4>
 {{#each comments as |comment|}}
 
