--- a/views/view-category.handlebars
+++ b/views/view-category.handlebars
@@ -1,17 +1,30 @@
 {{category.name}}
-
-{{#each posts as |post|}}
-  <div class='row mb-4 post'>
-    <div class='col-md-5'>
-      <h2>
-        <a href='/post/{{post.id}}'>{{post.title}}</a>
-      </h2>
-      <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
+<div class="row">
+  <div class="col-7">
+    {{#each posts as |post|}}
+    <div class='row mb-4 post'>
+      <div class='col-md-5'>
+        <h2>
+          <a href='/post/{{post.id}}'>{{post.title}}</a>
+        </h2>
+        <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
+      </div>
+      <div class='col-md-7'>
+        <p>
+          {{post.content}}
+        </p>
+      </div>
     </div>
-    <div class='col-md-7'>
-      <p>
-        {{post.content}}
-      </p>
-    </div>
+    {{/each}}
   </div>
-{{/each}}
+
+  <div class="col-5">
+    {{!-- Chat client --}}
+    <div class="socket-container" id="messageContainer">
+      <ul id="socketMessages"></ul>
+    </div>
+    <form id="socketForm" action="">
+      <input id="socketText" autocomplete="off" /><button>Send</button>
+    </form>
+  </div>
+</div>
