--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body {
   padding: 0.25rem;
   display: flex;
   height: 3rem;
-  width: 500px;
+  width: 300px;
   box-sizing: border-box;
   backdrop-filter: blur(10px);
 }
@@ -48,20 +48,20 @@ body {
 }
 .socket-message {
   margin-right: 1em;
-  width: 295px;
+  width: 175px;
 }
 .socket-user {
-  width: 130px;
+  width: 90px;
   overflow-wrap: anywhere;
-  font-size: smaller;
+  font-size:0.7rem;
   font-weight: lighter;
   font-style: italic;
   text-align: right;
 }
 .socket-container {
 
-  height: 250px;
-  width: 498px;
+  height: 400px;
+  width: 300px;
   border: 1px solid #ccc;
   font: 16px/26px Georgia, Garamond, Serif;
   overflow: auto;
