--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
-    <div class='card'>
+    <div class='card loginSignupCard'>
       <div class='card-body'>
         <div class='row'>
           <h2>signup</h2>
@@ -12,19 +12,19 @@
               <div class="container">
                 <div class='form-group'>
                   <label for='name-signup'>name:</label>
-                  <input class='form-input col' type='text' id='name-signup' />
+                  <input class='form-input col moveForm' type='text' id='name-signup' />
                 </div>
                 <div class='form-group'>
                   <label for='email-signup'>email:</label>
-                  <input class='form-input col' type='text' id='email-signup' />
+                  <input class='form-input col moveForm' type='text' id='email-signup' />
                 </div>
                 <div class='form-group'>
                   <label for='password-signup'>password:</label>
-                  <input class='form-input col' type='password' id='password-signup' />
+                  <input class='form-input col moveForm' type='password' id='password-signup' />
                 </div>
                 <div class='form-group'>
                   <button
-                    class='btn btn-primary'
+                    class='btn moveFormSubmitBtns'
                     type='submit'
                     class='signupBtn'
                   >signup</button>
