--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,9 @@
       rel='stylesheet'
       href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body >
@@ -33,7 +36,7 @@
       {{!-- If a user is logged in then render profile and logout links in the navbar --}}
       {{#if logged_in}}
       <a class='navbar-brand' href='/profile'>profile</a>
-      <a class='navbar-brand' id='logout'>logout</a>
+      <a class='navbar-brand' id='logout' href="/">logout</a>
       <script src='/js/logout.js'></script>
       {{/if}}
        
