--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <div class='card'>
+      <div class='card loginSignupCard'>
         <div class='card-body'>
           <div class='row'>
             <h2>Login</h2>
@@ -13,15 +13,15 @@
                 {{!-- <div class="container"> --}}
                   <div class='form-group'>
                     <label for='email-login'>email:</label>
-                    <input class='form-input col' type='text' id='email-login' />
+                    <input class='form-input col moveForm' type='text' id='email-login' />
                   </div>
                   <div class='form-group'>
                     <label for='password-login'>password:</label>
-                    <input class='form-input col' type='password' id='password-login' />
+                    <input class='form-input col moveForm' type='password' id='password-login' />
                   </div>
                   <div class='form-group'>
                     <button
-                      class='btn btn-primary'
+                      class='btn moveFormSubmitBtns'
                       type='submit'
                       id='submitBtn'
                     >login</button>
