--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,10 +1,10 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+{{!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> --}}
 <div class="row">
   <div class="col-auto" >
-    <h2>Hello, {{username}} What would you like to do today?</h2>
+    <h2>Hello, {{username}} what would you like to do today?</h2>
   </div>
 </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg " id="profileCatNav">
   {{#each categories as |category|}}
   <a class="navbar-brand" href="/category/{{category.id}}">{{category.name}}</a>
   {{/each}}
@@ -21,40 +21,21 @@
   </div>
 </nav>
 
-
-
 {{!-- Seperating coll --}}
 
-
 {{!-- Create post button --}}
-<div class="card">
-<div class="container">
-<div class="text-center">
-  <div class="row">
-    {{!-- first --}}
-    <div class="col">
-      <a href='/post/new' class="btn btn-primary btn-lg" style="background-color:#080741;">Create a new Post</a>
-  </div>
-    {{!-- 2nd --}}
-    <div class="col">
-<div class="card">
-     <h3> Chat with fellow outdoor enthusiasts!</h3>
-     {{!-- Chat client --}}
- <div class="socket-container" id="messageContainer">
-      <ul id="socketMessages"></ul>
-    </div>
-    <form id="socketForm" action="">
-      <input id="socketText" autocomplete="off" /><button>Send</button>
-    </form>
-<div>
-  </div>
-  </div>
-
+<div class="card" id="profileMainCard">
+  <div class="container">
+    <div class="text-center">
+      <div class="row">
+        {{!-- first --}}
+        <div class="col">
+          <a href='/post/new' class="btn btn-primary btn-lg" id="profileCreatePostBtn">Create a new Post</a>
+        </div>
+        {{!-- 2nd --}}
+      </div>
     </div>
   </div>
-</div>
-
-</div>
   {{#if posts.length}}
 
     <div class='col-md-6 project-list'>
@@ -74,6 +55,6 @@
     </div>
   {{/if}}
 </div>
-</div>
+
 <script src='./js/profile.js'></script>
 
