--- a/views/view-post.handlebars
+++ b/views/view-post.handlebars
@@ -28,10 +28,10 @@
       <form class="form new-comment-form">
         <div class="form-group row">
           <label class="col-4"for="comment-name">Add a comment</label>
-          <input class="form-input col-8" type="text" id="comment-name" name="comment-name" />
+          <input class="form-input col-8 moveForm" type="text" id="comment-name" name="comment-name" />
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-primary">Create Comment</button>
+          <button type="submit" class="btn moveFormSubmitBtns">Create Comment</button>
         </div>
       </form>
     </div>
@@ -42,25 +42,27 @@
 {{#if comments}}
 {{!-- only render comments section if they exist --}}
 <h4> User comments</h4>
-{{#each comments as |comment|}}
-
-<div class="card">
-  <div class="card-body">
-    <div class="text-center">
-      <div class='row post'>
-        <div class='col-md-5'>
-          <p>Comment by {{comment.user.username}} on {{ format_date comment.date_created}}</p>
-        </div>
-        <div class='col-md-7'>
-          <p>
-            {{comment.content}}
-          </p>
+<div id="commentBucket">
+  {{#each comments as |comment|}}
+  
+  <div class="card">
+    <div class="card-body">
+      <div class="text-center">
+        <div class='row post'>
+          <div class='col-md-5'>
+            <p>Comment by {{comment.user.username}} on {{ format_date comment.date_created}}</p>
+          </div>
+          <div class='col-md-7'>
+            <p>
+              {{comment.content}}
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  {{/each}}
 </div>
-{{/each}}
 {{/if}}
 
  {{#if logged_in}}
