moves socket chat client into partial template

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -29,19 +29,7 @@
 
   {{!-- The if statement below will conditionally display the chat client.  If the chat client is displayed when the user is not logged in, they will be assigned a random username --}}
   {{!-- {{#if logged_in}} --}}
-  {{!-- Chat client --}}
-
-  <div class="col-md-4">
-    <h3> Chat with fellow outdoor enthusiasts!</h3>
-    <div class="socket-container row" id="messageContainer">
-      <ul id="socketMessages" class="col"></ul>
-    </div>
-    <div class="row">
-      <form id="socketForm" class="col" action="">
-        <input id="socketText" autocomplete="off"/>
-        <button>Send</button>
-      </form>
-    </div>
-  </div>
+  {{>socketClient}}
   {{!-- {{/if}} --}}
+  
 </div>
