--- a/views/view-category.handlebars
+++ b/views/view-category.handlebars
@@ -18,18 +18,6 @@
     {{/each}}
   </div>
 
+  {{>socketClient}}
 
-    {{!-- Chat client --}}
-    <div class="col-md-4">
-    <h3> Chat with fellow outdoor enthusiasts!</h3>
-    <div class="socket-container row" id="messageContainer">
-      <ul id="socketMessages" class="col"></ul>
-    </div>
-    <div class="row">
-      <form id="socketForm" class="col" action="">
-        <input id="socketText" autocomplete="off"/>
-        <button>Send</button>
-      </form>
-    </div>
-  </div>
 </div>
