--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,6 +52,14 @@
     
     </main>
 
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <div class="row justify-content-center">
+        <a class="text-muted text-center text-decoration-none" href="https://github.com/aavillanueva6/Move">move &copy; 2022</a>
+      </div>
+      </div>
+    </footer>
+
     {{!-- bootstrap framework scripts --}}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
